fx2j-parser/src/test/resources/element/valid/script-inline.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:script>

        function handleButtonAction(event) {
            java.lang.System.out.println('You clicked me!');
        }
    </fx:script>
</VBox>