fx2j-parser/src/test/resources/element/invalid/script-source-value.fxml
<?language javascript?>

<?import javafx.scene.layout.VBox?>
<VBox xmlns:fx="http://javafx.com/fxml">
    <fx:script source="test.js">
        function handleButtonAction(event) {
            java.lang.System.out.println('You clicked me!');
        }
    </fx:script>
</VBox>